--- a/FileExplorer/Controls/ExpressionSelectorControl.xaml
+++ b/FileExplorer/Controls/ExpressionSelectorControl.xaml
@@ -3,12 +3,19 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
                   xmlns:main="clr-namespace:FileExplorer" 
+                  xmlns:controls="clr-namespace:FileExplorer.Controls" 
                   IsTextEditable="False" AllowDefaultButton="False" ValueMember="Statement"
                   ItemsSource="{Binding Expressions, Source={x:Static main:App.Repository}}">
 
-    <dxe:ComboBoxEdit.Buttons>
-        <dxe:ButtonInfo GlyphKind="Regular" Command="{DXCommand '@a($dxe:ComboBoxEdit).ShowManageExpressionView()'}" />
-        <dxe:ButtonInfo GlyphKind="DropDown" IsDefaultButton="True" />
-    </dxe:ComboBoxEdit.Buttons>
+    <dxe:ComboBoxEdit.Template>
+        <ControlTemplate>
+            <controls:ExpressionEditorControl EditValue="{Binding EditValue, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource TemplatedParent}}">
+                <controls:ExpressionEditorControl.Buttons>
+                    <dxe:ButtonInfo GlyphKind="Regular" Command="{DXCommand '@a($dxe:ComboBoxEdit).ShowManageExpressionView()'}" />
+                    <dxe:ButtonInfo GlyphKind="DropDown" Command="{Binding OpenPopupCommand, RelativeSource={RelativeSource AncestorType=dxe:ComboBoxEdit}}" />
+                </controls:ExpressionEditorControl.Buttons>
+            </controls:ExpressionEditorControl>
+        </ControlTemplate>
+    </dxe:ComboBoxEdit.Template>
     
 </dxe:ComboBoxEdit>
